Modify the sections

--- a/index.html
+++ b/index.html
@@ -1,136 +1,135 @@
+
 <!DOCTYPE HTML>
 <!--
-	Visualize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+  Visualize by TEMPLATED
+  templated.co @templatedco
+  Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Ayman's Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan&amp;subset=arabic" rel="stylesheet">
-	</head>
-	<body>
+  <head>
+    <title>Ayman's Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan&amp;subset=arabic" rel="stylesheet">
+  </head>
+  <body>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+    <!-- Wrapper -->
+      <div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1 style="font-family: 'El Messiri', sans-serif;">حياتنا عبارة عن قصة قصيرة نصنع أحداثها مرة واحدة ثم نمضي <br><strong>نعيش حياة واحدة ..</strong> لنجعلها تستحق<a href="http://templated.co"></a><br /></h1>
-						<h3 style="font-family: 'El Messiri', sans-serif; color: rgba(183, 183, 183, 0.8)">مهتم في البرمجة والذكاء الاصطناعي وعلوم الفيزياء والفضاء والفنون والبزنس</h3>
-						<ul class="icons">
-							<li><a href="https://twitter.com/aysh9014" class="icon style2 fa-twitter" target="blank"><span class="label">Twitter</span></a></li>
-							<!-- <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li> -->
-							<li><a href="https://instagram.com/aysh9014" class="icon style2 fa-instagram" target="blank"><span class="label">Instagram</span></a></li>
-							<!-- <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li> -->
-							<li><a href="mailto: ayman.alshanqiti@gmail.com" class="icon style2 fa-envelope-o" target="blank"><span class="label">Email</span></a></li>
-						</ul>
-					</header>
+        <!-- Header -->
+          <header id="header">
+            <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+            <h1 style="font-family: 'El Messiri', sans-serif;"><strong>أيمن الشنقيطي</strong><a href="http://templated.co"></a><br /></h1>
 
-				<!-- Main -->
-					<section id="main">
+            <h1 style="font-family: 'El Messiri', sans-serif;">حياتنا عبارة عن قصة قصيرة نصنع أحداثها مرة واحدة ثم نمضي <br><strong>نعيش حياة واحدة ..</strong> لنجعلها تستحق<a href="http://templated.co"></a><br /></h1>
+            <h3 style="font-family: 'El Messiri', sans-serif; color: rgba(183, 183, 183, 0.8)">مهتم في البرمجة والذكاء الاصطناعي وعلوم الفيزياء والفضاء والفنون والبزنس</h3>
+            <ul class="icons">
+              <li><a href="https://twitter.com/aysh9014" class="icon style2 fa-twitter" target="blank"><span class="label">Twitter</span></a></li>
+              <!-- <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li> -->
+              <li><a href="https://instagram.com/aysh9014" class="icon style2 fa-instagram" target="blank"><span class="label">Instagram</span></a></li>
+              <!-- <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li> -->
+              <li><a href="mailto: ayman.alshanqiti@gmail.com" class="icon style2 fa-envelope-o" target="blank"><span class="label">Email</span></a></li>
+            </ul>
+          </header>
 
-						<!-- Thumbnails -->
-							<section class="thumbnails">
-								<div>
-									<a href="images/fulls/01.jpg">
-										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>مؤسس تطبيق لتوصيل الطعام</h3>
-									</a>
-									<a href="images/fulls/08.jpg">
-										<img src="images/thumbs/08.jpg" alt="" />
-										<h3>أعشق متابعة العلوم والفضاء</h3>
-									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>أمتلك قدرات تأثير عالية على الآخرين</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>طوّرت نظام لإدارة الأوقاف والمواريث</h3>
-									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>أعشق التحديات والمغامرات</h3>
-									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>أحب السفر والتعرف على ثقافات الشعوب</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/06.jpg">
-										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>فزنا بجائزة أفضل شركة ناشئة في مكة</h3>
-									</a>
-									<a href="images/fulls/07.jpg">
-										<img src="images/thumbs/07.jpg" alt="" />
-										<h3>القهوة جزء من عائلتي</h3>
-									</a>
-								</div>
-							</section>
+        <!-- Main -->
+          <section id="main">
 
-							<section class="thumbnails">
-								<div>
-									<a href="images/fulls/09.jpg">
-										<img src="images/thumbs/09.jpg" alt="" />
-										<h3>مثّلت المملكة في مخيم الجامبوري العالمي بكندا</h3>
-									</a>
-									<a href="images/fulls/16.jpg">
-										<img src="images/thumbs/16.jpg" alt="" />
-										<h3>أحب الطبخ في البر</h3>
-									</a>
-									<a href="images/fulls/10.jpg">
-										<img src="images/thumbs/10.jpg" alt="" />
-										<h3>يوم اطفش احب أشخمط</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/11.jpg">
-										<img src="images/thumbs/11.jpg" alt="" />
-										<h3>شاركت في مسرعة أعمال تسعة أعشار</h3>
-									</a>
-									<a href="images/fulls/12.jpg">
-										<img src="images/thumbs/12.jpg" alt="" />
-										<h3>شاركت في مسرعة أعمال مكة</h3>
-									</a>
-									<a href="images/fulls/14.jpg">
-										<img src="images/thumbs/14.jpg" alt="" />
-										<h3>ProgramizeMe أدرت برنامج صناعة المبرمجين</h3>
-									</a>
-								</div>
-								<div>
-									<a href="images/fulls/13.jpg">
-										<img src="images/thumbs/13.jpg" alt="" />
-										<h3>الأكل عندي له جو وطقوس</h3>
-									</a>
-									<a href="images/fulls/15.jpg">
-										<img src="images/thumbs/15.jpg" alt="" />
-										<h3>مهتم في البزنس وتطوير الشركات</h3>
-									</a>
-								</div>
-							</section>
+            <!-- Thumbnails -->
+              <section class="thumbnails">
+                <div>
+                  <a href="images/fulls/01.jpg">
+                    <img src="images/thumbs/01.jpg" alt="" />
+                    <h3>مؤسس تطبيق لتوصيل الطعام</h3>
+                  </a>
+                  <a href="images/fulls/08.jpg">
+                    <img src="images/thumbs/08.jpg" alt="" />
+                    <h3>أعشق متابعة العلوم والفضاء</h3>
+                  </a>
+                  <a href="images/fulls/02.jpg">
+                    <img src="images/thumbs/02.jpg" alt="" />
+                    <h3>أمتلك قدرات تأثير عالية على الآخرين</h3>
+                  </a>
 
-					</section>
+                  <a href="images/fulls/09.jpg">
+                    <img src="images/thumbs/09.jpg" alt="" />
+                    <h3>مثّلت المملكة العربية السعودية في مخيم الجامبوري العالمي بكندا</h3>
+                  </a>
+                  <a href="images/fulls/16.jpg">
+                    <img src="images/thumbs/16.jpg" alt="" />
+                    <h3>أحب الطبخ في البر</h3>
+                  </a>
+                  <a href="images/fulls/10.jpg">
+                    <img src="images/thumbs/10.jpg" alt="" />
+                    <h3>يوم اطفش احب أشخمط</h3>
+                  </a>
+                </div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<p>في رحلة العمر والأيام مسرعة، لا تنسَ من انت أو ما وجهة السفر</p>
-					</footer>
+                <div>
+                  <a href="images/fulls/03.jpg">
+                    <img src="images/thumbs/03.jpg" alt="" />
+                    <h3>طوّرت نظام لإدارة الأوقاف والمواريث</h3>
+                  </a>
+                  <a href="images/fulls/04.jpg">
+                    <img src="images/thumbs/04.jpg" alt="" />
+                    <h3>أعشق التحديات والمغامرات</h3>
+                  </a>
+                  <a href="images/fulls/05.jpg">
+                    <img src="images/thumbs/05.jpg" alt="" />
+                    <h3>أحب السفر والتعرف على ثقافات الشعوب</h3>
+                  </a>
 
-			</div>
+                  <a href="images/fulls/11.jpg">
+                    <img src="images/thumbs/11.jpg" alt="" />
+                    <h3>شاركت في مسرعة أعمال تسعة أعشار بكاوست</h3>
+                  </a>
+                  <a href="images/fulls/12.jpg">
+                    <img src="images/thumbs/12.jpg" alt="" />
+                    <h3>شاركت في مسرعة أعمال مكة</h3>
+                  </a>
+                  <a href="images/fulls/14.jpg">
+                    <img src="images/thumbs/14.jpg" alt="" />
+                    <h3>ProgramizeMe أدرت برنامج صناعة المبرمجين</h3>
+                  </a>
+                </div>
+                
+                <div>
+                  <a href="images/fulls/06.jpg">
+                    <img src="images/thumbs/06.jpg" alt="" />
+                    <h3>فزنا بجائزة أفضل شركة ناشئة في مكة</h3>
+                  </a>
+                  <a href="images/fulls/07.jpg">
+                    <img src="images/thumbs/07.jpg" alt="" />
+                    <h3>القهوة جزء من عائلتي</h3>
+                  </a>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/main.js"></script>
+                  <a href="images/fulls/13.jpg">
+                    <img src="images/thumbs/13.jpg" alt="" />
+                    <h3>شخصيات الأبطال الخارقون محببة لدي</h3>
+                  </a>
+                  <a href="images/fulls/15.jpg">
+                    <img src="images/thumbs/15.jpg" alt="" />
+                    <h3>مهتم في البزنس وتطوير الشركات</h3>
+                  </a>
+                </div>
+              </section>
 
-	</body>
-</html>
+          </section>
+
+        <!-- Footer -->
+          <footer id="footer">
+            <p>في رحلة العمر والأيام مسرعة، لا تنسَ من انت أو ما وجهة السفر</p>
+          </footer>
+
+      </div>
+
+    <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.poptrox.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/main.js"></script>
+
+  </body>
+</html> 
