--- a/index.html
+++ b/index.html
@@ -44,18 +44,17 @@
                     <img src="images/thumbs/01.jpg" alt="" />
                     <h3>مؤسس تطبيق لتوصيل الطعام</h3>
                   </a>
+                  <a href="images/fulls/15.jpg">
+                    <img src="images/thumbs/15.jpg" alt="" />
+                    <h3>مهتم في البزنس وتطوير الشركات</h3>
+                  </a>
+                  <a href="images/fulls/11.jpg">
+                    <img src="images/thumbs/11.jpg" alt="" />
+                    <h3>شاركت في مسرعة أعمال تسعة أعشار بكاوست</h3>
+                  </a>
                   <a href="images/fulls/08.jpg">
                     <img src="images/thumbs/08.jpg" alt="" />
                     <h3>أعشق متابعة العلوم والفضاء</h3>
-                  </a>
-                  <a href="images/fulls/02.jpg">
-                    <img src="images/thumbs/02.jpg" alt="" />
-                    <h3>أمتلك قدرات تأثير عالية على الآخرين</h3>
-                  </a>
-
-                  <a href="images/fulls/09.jpg">
-                    <img src="images/thumbs/09.jpg" alt="" />
-                    <h3>مثّلت المملكة العربية السعودية في مخيم الجامبوري العالمي بكندا</h3>
                   </a>
                   <a href="images/fulls/16.jpg">
                     <img src="images/thumbs/16.jpg" alt="" />
@@ -68,30 +67,29 @@
                 </div>
 
                 <div>
-                  <a href="images/fulls/03.jpg">
-                    <img src="images/thumbs/03.jpg" alt="" />
-                    <h3>طوّرت نظام لإدارة الأوقاف والمواريث</h3>
-                  </a>
                   <a href="images/fulls/04.jpg">
                     <img src="images/thumbs/04.jpg" alt="" />
                     <h3>أعشق التحديات والمغامرات</h3>
                   </a>
-                  <a href="images/fulls/05.jpg">
-                    <img src="images/thumbs/05.jpg" alt="" />
-                    <h3>أحب السفر والتعرف على ثقافات الشعوب</h3>
+                  <a href="images/fulls/02.jpg">
+                    <img src="images/thumbs/02.jpg" alt="" />
+                    <h3>أمتلك قدرات تأثير عالية على الآخرين</h3>
                   </a>
-
-                  <a href="images/fulls/11.jpg">
-                    <img src="images/thumbs/11.jpg" alt="" />
-                    <h3>شاركت في مسرعة أعمال تسعة أعشار بكاوست</h3>
+                  <a href="images/fulls/03.jpg">
+                    <img src="images/thumbs/03.jpg" alt="" />
+                    <h3>أنشأت شركة متخصصة في تطوير البرمجيات</h3>
                   </a>
                   <a href="images/fulls/12.jpg">
                     <img src="images/thumbs/12.jpg" alt="" />
                     <h3>شاركت في مسرعة أعمال مكة</h3>
                   </a>
-                  <a href="images/fulls/14.jpg">
-                    <img src="images/thumbs/14.jpg" alt="" />
-                    <h3>ProgramizeMe أدرت برنامج صناعة المبرمجين</h3>
+                  <a href="images/fulls/05.jpg">
+                    <img src="images/thumbs/05.jpg" alt="" />
+                    <h3>أحب السفر والتعرف على ثقافات الشعوب</h3>
+                  </a>
+                  <a href="images/fulls/17.jpg">
+                    <img src="images/thumbs/17.jpg" alt="" />
+                    <h3>معسكر طويق من أفضل استثمارات حياتي</h3>
                   </a>
                 </div>
                 
@@ -100,18 +98,21 @@
                     <img src="images/thumbs/06.jpg" alt="" />
                     <h3>فزنا بجائزة أفضل شركة ناشئة في مكة</h3>
                   </a>
-                  <a href="images/fulls/07.jpg">
-                    <img src="images/thumbs/07.jpg" alt="" />
-                    <h3>القهوة جزء من عائلتي</h3>
+                  <a href="images/fulls/14.jpg">
+                    <img src="images/thumbs/14.jpg" alt="" />
+                    <h3>ProgramizeMe أدرت برنامج صناعة المبرمجين</h3>
                   </a>
-
+                  <a href="images/fulls/09.jpg">
+                    <img src="images/thumbs/09.jpg" alt="" />
+                    <h3>مثّلت المملكة العربية السعودية في مخيم الجامبوري العالمي بكندا</h3>
+                  </a>
                   <a href="images/fulls/13.jpg">
                     <img src="images/thumbs/13.jpg" alt="" />
                     <h3>شخصيات الأبطال الخارقون محببة لدي</h3>
                   </a>
-                  <a href="images/fulls/15.jpg">
-                    <img src="images/thumbs/15.jpg" alt="" />
-                    <h3>مهتم في البزنس وتطوير الشركات</h3>
+                  <a href="images/fulls/07.jpg">
+                    <img src="images/thumbs/07.jpg" alt="" />
+                    <h3>القهوة جزء من عائلتي</h3>
                   </a>
                 </div>
               </section>
